added new introduction

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,10 +1,17 @@
-# Introduction
+# Overview
  
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+This is an overview on the Beetle sales AI.
 
-## What is Nextra?
+## What is Beetle?
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+A **simple** and **intuitive** bot that interacts with your website to guide users through your website. It's the equivalent of a having a sales assitant co-browsing your website with your users.
+
+## What can Beetle do?
+
+It can do a lot of things, but here are some of the most important ones:
+1. **Guide users** - Beetle can guide users through your website and help them find what they are looking for.
+2. **Answer questions** - Beetle can answer questions about your products and services.
+3. **Collect leads** - Beetle can collect leads and send them to your CRM.
 
 ## Documentation
 
