--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,12 +1,13 @@
-# Overview
- 
-This is an overview on the Beetle sales AI.
+## Philosophy
 
-## What is Beetle?
+> *“Alright, check this out. You know how chatbots are, right? They're supposed to be simple, smart, and user-friendly. But why are we locking them up in a tiny chat window? That's like putting Prince in a karaoke bar and telling him he can only sing 'Twinkle, Twinkle, Little Star.' It just ain't right.”*  
+> — Dave Chappelle
 
-A **simple** and **intuitive** bot that interacts with your website to guide users through your website. It's the equivalent of a having a sales assitant co-browsing your website with your users.
+## Designed for no-coders who want to build chatbots
 
-## What can Beetle do?
+
+
+## And for developers who want to plug and play with their own code
 
 It can do a lot of things, but here are some of the most important ones:
 1. **Guide users** - Beetle can guide users through your website and help them find what they are looking for.
